--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,42 @@
     tools:context=".MainActivity"
     android:background="@color/black">
 
-    <Button
-        android:id="@+id/button"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/outlinedTextField"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:hint="Reminder"
-        android:layout_centerInParent="true"
-        >
-
-        <EditText
-            android:id="@+id/editTxt"
-            android:inputType="text"
-            android:imeOptions="actionSend"
+        android:layout_centerInParent="true">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextField"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Reminder"
+            android:paddingHorizontal="10dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <EditText
+                android:id="@+id/editTxt"
+                android:inputType="text"
+                android:imeOptions="actionSend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:layout_centerInParent="true"
+            android:layout_below="@id/outlinedTextField"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/button"
+            android:id="@+id/recyclerView"
+            />
+
+    </RelativeLayout>
+
 </RelativeLayout>
