--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -10,4 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/element_text" />
+
+    <ImageButton
+        android:id="@+id/addButton"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_launcher_foreground" />
 </FrameLayout>
